# ADVIENTO_VIAJE_SHANGHAI

./: .dockerignore  .gitignore  .vercelignore  CONFIGURACION-TU-NUMERO.md  Dockerfile  MENSAJES-WHATSAPP-FINAL.md  Procfile  README-SHANGHAI.md  README.md  app.py  añadir-videos.py  build.sh  contenido_dias_plantilla.md  cron-config.json  deploy-and-test.sh  deploy-production.sh  domain-config.md  env.prod  estructura-dias-mejorada.md  expandir-contenido.py  index.html  local_build.sh  nixpacks.toml  package.json  pyproject.toml  railway.json  railway.toml  reflex.toml  render.yaml  replace_breakpoints.py  requirements.txt  rxconfig.py  start.py  test-api.py  test-whatsapp.py  upload_to_github.bat  vercel.json
adeviento_web/: .gitignore  Dockerfile  Procfile  __init__.py  adeviento_web.py  constants.py
adeviento_web/components/: countdown.py  github.py  link_icon.py  photo_carousel.py  shanghai_info.py  special_effects.py
adeviento_web/config/: whatsapp_config.py
adeviento_web/services/: meta_whatsapp_service.py  whatsapp_service.py
adeviento_web/styles/: styles.py
adeviento_web/utils/: date_utils.py
adeviento_web/views/: admin.py  calendar.py  (+5 more)
api/: daily-message.py  index.py  webhook.py
components/: button.py  countdown.py  day.py  header_text.py  photo_carousel.py  special_effects.py
deploy_configs/: app.json  nixpacks.toml  railway.env  railway.toml  vercel.json
frontend/: env.example  upload_frontend.bat  vercel.json
services/: __init__.py
styles/: colors.py  fonts.py  styles.py
views/: author.py  day_detail.py  footer.py  partners.py
(+5 files in other folders)
