[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adeviento-web"
version = "1.0.0"
description = "Calendario de Adviento Shanghai 2025"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "reflex>=0.4.0",
    "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
